# hyperfun

./: .gitignore  README  TODO.org  hypergraph.py  main.py  pyproject.toml
hyperfun/: hypergraph.py  main.py
