[tool.poetry]
name = "hyperfun"
version = "0.1.0"
description = "Hypergraph REPL"
authors = ["Matthias Lanzinger <mlanzing@dbai.tuwien.ac.at>"]

[tool.poetry.dependencies]
python = "^3.6"
termcolor = "^1.1.0"
colorama = "^0.4.3"
coolname = "^1.1.0"
networkx = "^2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
